[metadata]
name = poem
version = 1.0.0
description = Platform of Optimal Experiment Management
long_description = file: POEM/README.md
license_files = POEM/LICENSE POEM/NOTICE.txt
url = https://github.com/idaholab/POEM

[options]
packages =
    POEM
    POEM/models
    POEM/src
    POEM/src/poem
    POEM/src/poem/templates

python_requires = >=3.9

install_requires =
   raven_framework >=3.0
